--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,14 @@ services:
 # python:
 #   - "3.5"
 
+env:
+  DOCKER_COMPOSE_VERSION: 1.6.2
+
 before_install:
+  - sudo rm /usr/local/bin/docker-compose
+  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+  - chmod +x docker-compose
+  - sudo mv docker-compose /usr/local/bin
   - curl -fsSL https://raw.githubusercontent.com/CWSpear/local-persist/master/scripts/install.sh | sudo bash -s -- --upstart
 
 install:
