--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ env:
   DOCKER_COMPOSE_VERSION: 1.6.2
 
 before_install:
+  - sudo apt-get purge -y docker-engine
   - sudo apt-get update
   - sudo apt-get install -y docker-engine
   - sudo rm /usr/local/bin/docker-compose
