--- a/.travis.yml
+++ b/.travis.yml
@@ -23,9 +23,9 @@ before_install:
 
 install:
   - docker-compose build
+  - docker-compose run web python manage.py migrate
 
 script:
-  - docker-compose up -d
   - docker-compose run web python manage.py test -v 2 polls
 
 # install:
