try to check with ps for why cannot connect to 5432

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,8 @@ before_install:
 install:
   - docker-compose build
   - docker-compose up -d
+  - docker ps
+  - docker-compose ps
   - docker-compose run web python manage.py migrate
 
 script:
