--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,11 @@ python:
 
 services:
   - postgresql
+  - redis-server
 
 env:
   DB_HOST: 127.0.0.1
+  REDIS_HOST: 127.0.0.1
 
 install:
   - pip install -r requirements.txt
@@ -16,7 +18,6 @@ before_script:
 
 script:
   - python manage.py check
-  - python manage.py migrate
   - python manage.py test -v 2 polls
 
 
