--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,15 +27,13 @@ services:
     command: python manage.py runserver 0.0.0.0:8000
     build: .
     volumes:
-      - .:/code/
+      - ./apps:/apps
     ports:
       - "8000:8000"
     depends_on:
       - db
       - db_wait
       - redis
-    entrypoint:
-      - /code/entrypoint.sh
 
 volumes:
   postgresql-data:
