--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       - "63790:6379"
 
   web:
+    restart: always
     command: python manage.py runserver 0.0.0.0:8000
     build: .
     volumes:
