--- a/apps/requirements.txt
+++ b/apps/requirements.txt
@@ -1,6 +1,8 @@
 Django==1.9.4
+django-debug-toolbar==1.4
 django-redis-cache==1.6.5
 psycopg2==2.6.1
 redis==2.10.5
 hiredis==0.2.0
+sqlparse==0.1.19
 whitenoise==3.0
