--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ before_install:
 
 install:
   - pip install -r requirements.txt
+  - python manage.py collectstatic --noinput
 
 script:
   - python manage.py check
