--- a/apps/requirements.txt
+++ b/apps/requirements.txt
@@ -1,8 +1,18 @@
+amqp==1.4.9
+anyjson==0.3.3
+Babel==2.2.0
+billiard==3.3.0.23
+celery==3.1.23
 Django==1.9.4
 django-debug-toolbar==1.4
 django-redis-cache==1.6.5
-psycopg2==2.6.1
-redis==2.10.5
+flower==0.9.0
 hiredis==0.2.0
+kombu==3.0.35
+psycopg2==2.6.1
+pycparser==2.14
+pytz==2016.3
+redis==2.10.5
 sqlparse==0.1.19
+tornado==4.2
 whitenoise==3.0
