fixed wrong volume mapping, see: https://github.com/docker-library/postgres/issues/103#issuecomment-167631242

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   db:
     image: postgres
     volumes:
-      - /var/lib/postgresql:/var/lib/postgresql
+      - /var/lib/postgresql/data:/var/lib/postgresql/data
     ports:
       - "54320:5432"
 
