--- a/apps/requirements.txt
+++ b/apps/requirements.txt
@@ -1,18 +1,28 @@
 amqp==1.4.9
 anyjson==0.3.3
+asgi-redis==0.10.0
+asgiref==0.11.2
+autobahn==0.13.0
 Babel==2.2.0
 billiard==3.3.0.23
 celery==3.1.23
+channels==0.11.0
+daphne==0.10.3
 Django==1.9.4
 django-debug-toolbar==1.4
 django-redis-cache==1.6.5
 flower==0.9.0
 hiredis==0.2.0
 kombu==3.0.35
+msgpack-python==0.4.7
 psycopg2==2.6.1
 pycparser==2.14
 pytz==2016.3
 redis==2.10.5
+six==1.10.0
 sqlparse==0.1.19
 tornado==4.2
+Twisted==16.1.0
+txaio==2.2.2
 whitenoise==3.0
+zope.interface==4.1.3
