--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ env:
   DB_HOST: 127.0.0.1
   REDIS_HOST: 127.0.0.1
 
+before_install:
+  - pip install --upgrade pip
+
 install:
   - pip install -r requirements.txt
   - python manage.py collectstatic --noinput
