--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,9 @@ before_install:
 
 install:
   - pip install -r requirements.txt
+
+before_script:
+  - cd apps
   - python manage.py collectstatic --noinput
 
 script:
